@@ -1472,7 +1472,7 @@ inline void FTermOutput::appendOutputBuffer (const FTermControl& ctrl)
 }
 
 //----------------------------------------------------------------------
-inline void FTermOutput::appendOutputBuffer (UniChar&& ch)
+inline void FTermOutput::appendOutputBuffer (const UniChar& ch)
 {
   appendOutputBuffer(unicode_to_utf8(wchar_t(ch)));
 }
