@@ -1,3 +1,6 @@
+2022-10-28  Markus Gans  <guru.mail@muenster.de>
+	* Generalize text reading from terminal
+
 2022-10-23  Markus Gans  <guru.mail@muenster.de>
 	* Queuing of mouse and keyboard inputs is now implemented with 
 	  a ring buffer
